# COMP5400M-Bio-inspired-Computing

./: .gitignore  README.md
CW1/: CW1.docx  CW1.edited.docx  CW1.tar  demo.py  log.txt
CW1/03.28/: log.txt  totalDistance.txt  totalOrigin.txt
CW1/03.29/: 571.txt  check.txt  pred(50) .txt  pred.txt  prey(10).txt  prey.txt
CW1/CW1/: mouse.cc
CW1/CW1 final/: Q4.py  chase.cc  pred_fitness.py
CW1/Demo/: ZumoKing.py  ZumoKing.txt  ZumoQueen.py  ZumoQueen.txt
CW1/Summary/: README.txt  mouse.cc  prey_fitness.py
CW1/beast/: CMakeLists.txt
CW1/beast/apps/: CMakeLists.txt  beastframe.cc  beastframe.h  screengrab.cc  worldglcanvas.cc  worldglcanvas.h  wxbeast.cc  wxbeast.cc~  wxbeast.h
CW1/beast/apps/CVS/: Entries  Repository
CW1/beast/libs/: CMakeLists.txt  CMakeLists.txt~  animat.cc~  animat.h  animat.h~  animatmonitor.cc  animatmonitor.h~  bacteria.cc  bacteria.h  bacterium.cc  bacterium.h  beast.cc  beast.h  collisions.cc  collisions.h~  colours.h  distribution.cc  distribution.h  drawable.cc  drawable.h~  dynamicalnet.cc  dynamicalnet.h  feedforwardnet.cc  feedforwardnet.h  geneticalgorithm.h  glut.cc  glutsimenv.h  neuralanimat.cc  neuralanimat.h  population.h  psoalgorithm.h  random.h  sensor.cc  sensor.h  sensorbase.h~  sensorfunctors.h  serialfuncs.cc  serialfuncs.h  signaller.h  simulation.cc  (+17 more)
CW1/beast/libs/CVS/: Entries  Repository
CW1/beast/libs/beast/: CMakeLists.txt  wxsimenv.rc
CW1/beast/libs/beast/CVS/: Entries  Repository
CW1/beast/projects/: AntAlgGUI.h~  AntAlgGUISimulation.h  AntAlgGUISimulation.h~  CMakeLists.txt  CMakeLists.txt~  LFCluster.cc~  LFSort.cc~  ant.cc  ant1.cc  baccyexamples.cc  bacteria.cc  braitenberg.cc  braitenberg.cc~  chase.cc  demos.cc  demos.cc~  loadTGATexture.h  mouse.cc  mouse.cc~  pacman.cc  poolbots.cc  shrew.cc  shrew.cc~  shrew.h  signal.cc  sigtest.cc  test.cc  world3d.cc~
CW1/beast/projects/3DStuff/: Animat3D.cc  Test3D.cc  Test3D.cc~  WorldObject3D.cc~  WorldObject3D.h
CW1/beast/projects/AntGUI/: AntAlgGUI.cc  AntAlgGUI.cc~  AntAlgGUI.cpp  AntAlgGUI.cpp~  AntAlgGUI.h  AntAlgGUI.h~  AntAlgGUISimulation.cc  AntAlgGUISimulation.cc~  AntAlgGUISimulation.h  AntAlgGUISimulation.h~  ColourSortPanel.cc  ColourSortPanel.cc~  ColourSortPanel.h  ColourSortPanel.h~
CW1/beast/projects/Apps/: KLSGraphPart.cc  KLSGraphPart.cc~
CW1/beast/projects/CVS/: Entries  Repository  Root
CW1/beast/projects/Common/: Ant.h  Ant.h~  Item.h  Item.h~
CW1/beast/projects/Evaluation/: AverageEvaluation.cc  AverageEvaluation.cc~
CW1/beast/projects/InitialGUI/: LFSortGUI.cc  LFSortGUI.cc~
CW1/beast/projects/Prototypes/: Item.h  Item.h~  KLSGraphPart.cc  KLSGraphPart.cc~  LFCluster.cc  LFCluster.cc~  LFSort.cc  LFSort.cc~  loadTGATexture.h  world3d.cc
CW1/beast/projects/Prototypes2/: LFSort.cc  LFSort.cc~
CW1/beast/projects/Situatedness/: LFSortSituated.cc  LFSortSituated.cc~  SituatedSensors.cc~  SituatedSensors.h  SituatedSensors.h~
CW1/doc/: BEAST.ps  animat_8cc.html  animat_8h-source.html  animat_8h.html  animatmonitor_8h-source.html  animatmonitor_8h.html  annotated.html  bacteria_8h-source.html  bacteria_8h.html  bacteriacode.html  bacterium_8h-source.html  bacterium_8h.html  bacteriumcode.html  beast_8h-source.html  beast_8h.html  braitenbergcode.html  chasecode.html  classBEAST_1_1Animat-members.html  classBEAST_1_1Animat.html  classBEAST_1_1AreaSensor-members.html  classBEAST_1_1AreaSensor.html  classBEAST_1_1Bacterium-members.html  classBEAST_1_1Bacterium.html  classBEAST_1_1BeamSensor-members.html  classBEAST_1_1BeamSensor.html  classBEAST_1_1DNNAnimat-members.html  classBEAST_1_1DNNAnimat.html  classBEAST_1_1Distribution-members.html  classBEAST_1_1Distribution.html  classBEAST_1_1DynamicalNet-members.html  classBEAST_1_1DynamicalNet.html  classBEAST_1_1EvalNearest-members.html  classBEAST_1_1EvalNearest.html  classBEAST_1_1EvalNearestAbsX-members.html  (+224 more)
CW2/: Backpropagation on the Iris data set.ipynb  Bio-CW2-Fanhui.docx  Bio-CW2-Fanhui.edited.docx  Bio_CW2.tar
Revision/: 19 Exam.docx  20 Exam.edited (1).docx
(+12 files in other folders)
